# Samriddhi-D_2R_Manipulator_Impedance-Control

./: 2R  Elbow Manipulator.xml  2R grav compensation.py  PD Control on 2R.py  README.md
src/cobot_ros/: README.md
src/cobot_ros/addverb_cobot_control/: CMakeLists.txt  package.xml
src/cobot_ros/addverb_cobot_control/config/: default_controllers.yaml  payload_param.yaml
src/cobot_ros/addverb_cobot_control/include/addverb_cobot_control/: addverb_cobot_hw.h  ros_wrapper.h
src/cobot_ros/addverb_cobot_control/launch/: bringup.launch
src/cobot_ros/addverb_cobot_control/src/: addverb_cobot_hw.cpp  control_node.cpp  ros_wrapper.cpp  test_ros_wrapper.cpp
src/cobot_ros/addverb_cobot_controllers/: CMakeLists.txt  addverb_cobot_controllers_plugin.xml  package.xml
src/cobot_ros/addverb_cobot_controllers/include/addverb_cobot_controllers/: joint_trajectory_command_handle.h  joint_trajectory_controller.h  twist_command_handle.h  twist_controller.h
src/cobot_ros/addverb_cobot_controllers/src/: joint_trajectory_controller.cpp  twist_controller.cpp
src/cobot_ros/addverb_cobot_description/launch/: display.launch
src/cobot_ros/addverb_cobot_description/mesh/: base_link.STL  link1.STL  link2.STL  link4.STL  link5.STL
src/cobot_ros/addverb_cobot_msgs/: CMakeLists.txt  package.xml
src/cobot_ros/addverb_cobot_msgs/action/: ErrorRecovery.action  Grasp.action  Release.action
src/cobot_ros/addverb_cobot_ros/: CMakeLists.txt  package.xml
src/cobot_ros/examples/: CMakeLists.txt  package.xml
src/cobot_ros/examples/src/: demo_joint_trajectory.cpp  demo_multi_trajectory.cpp  demo_twist.cpp  demo_velocity.cpp
